# Lab6

temporium/: CMakeLists.txt  README.md  run.sh
temporium/docker/: docker-compose.yml
temporium/include/: database_manager.h  hash_utils.h  mainwindow.h  types.h
temporium/packaging/: temporium-launcher.sh  temporium.desktop
temporium/packaging/debian/DEBIAN/: control  postinst  prerm
temporium/resources/: resources.qrc
temporium/sql/: init.sql
temporium/src/: database_manager.cpp  main.cpp  mainwindow.cpp
